deploy/base/robberts-assistent-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robberts-assistent-backend
  labels:
    app: robberts-assistent-backend
spec:
  type: ClusterIP
  selector:
    app: robberts-assistent-backend
  ports:
    - name: http
      port: 80
      targetPort: http
