deploy/base/robberts-assistent-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: robberts-assistent-frontend
  labels:
    app: robberts-assistent-frontend
spec:
  host: robberts-assistent.vdzonsoftware.nl
  to:
    kind: Service
    name: robberts-assistent-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
